production/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-deployments-web
  labels:
    name: cloud-deployments-web
