production/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cloud-deployments-web
  name: cloud-deployments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-deployments
  template:
    metadata:
      labels:
        app: cloud-deployments
    spec:
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: cloud-deployments-pvc
        - name: logs
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: testing
          emptyDir: {}
        - name: sessions
          emptyDir: {}
        - name: views
          emptyDir: {}
      securityContext:
        fsGroup: 82
      containers:
        - name: fpm
          image: noahdev123/cloud-deployments:latest
          resources:
            requests:
              cpu: 250m
              memory: 128M
            limits:
              cpu: 500m
              memory: 256M
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/html/storage
            - name: logs
              mountPath: /var/www/html/storage/logs
            - name: cache
              mountPath: /var/www/html/storage/framework/cache
            - name: sessions
              mountPath: /var/www/html/storage/framework/sessions
            - name: views
              mountPath: /var/www/html/storage/framework/views
            - name: testing
              mountPath: /var/www/html/storage/framework/testing
        - name: horizon
          image: noahdev123/cloud-deployments:latest
          resources:
            requests:
              cpu: 200m
              memory: 128M
            limits:
              cpu: 400m
              memory: 256M
          command: [ "php", "artisan", "horizon" ]
        - name: reverb
          image: noahdev123/cloud-deployments:latest
          resources:
            requests:
              cpu: 200m
              memory: 128M
            limits:
              cpu: 400m
              memory: 256M
          command: [ "php", "artisan", "reverb:start", "--host=0.0.0.0", "--port=8080" ]
        - name: nginx
          image: noahdev123/cloud-deployments-nginx:latest
          resources:
            requests:
              cpu: 250m
              memory: 128M
            limits:
              cpu: 500m
              memory: 256M
          ports:
            - containerPort: 80
