production/kubernetes/fpm-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: cloud-deployments-web
  name: cloud-deployments-fpm-service
  labels:
    app: cloud-deployments
spec:
  selector:
    app: cloud-deployments
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
