production/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-deployments-service
  labels:
    app: cloud-deployments
spec:
  selector:
    app: cloud-deployments
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
